2024-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* .github/workflows/windows.yaml: Dialed down to r-release only

2024-01-25  Jeroen Ooms  <jeroenooms@gmail.com>

	* tools/winlibs.R: Generalized to also support arm64 on Windows
	* src/Makevars.win: Idem
	* src/utils.cpp: Accomate cmake-generated version string
	* .github/workflows/windows.yaml: Added

2024-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

2024-11-06  Jeroen Ooms  <jeroenooms@gmail.com>

	* configure.ac: Use universal build macOS build of QuantLib 1.31.1
	* configure: Idem

2023-11-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.20
	* configure.ac: Idem
	* configure: Idem

	* man/AffineSwaption.Rd: Add missing `\code` before stray `{}`
	* man/BermudanSwaption.Rd: Ditto
	* man/SabrSwaption.Rd: Ditto

	* src/affine.cpp (calibrateModel2): Adjust printf format string
	* src/bermudan.cpp (calibrateModel): Ditto

	* man/CallableBond.Rd: Wrap example in 'if (interactive())' to not
	run afould example computation time

	* src/Makevars.in (#CXX_STD): No longer explicitly set C++14 which is
	the default since R 4.2.0; if needed uncomment the line

	* src/RcppExports.cpp: Regenrated under Rcpp 1.0.11.5 to avoid a
	warning from -Wformat-security

2023-09-20  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml (jobs): Update to actions/checkout@v4

2023-08-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.19
	* configure.ac: Idem
	* configure: Idem

	* man/AffineSwaption.Rd: Add \dontrun{} to example
	* man/BermudanSwaption.Rd: Idem
	* man/Bond.Rd: Idem
	* man/DiscountCurve.Rd: Idem
	* man/EuropeanOptionArrays.Rd: Idem

	* src/Makevars.win: Remove useful-but-verboten compiler option to
	silence overly verbose output due to Boost headers

2023-08-05  Dirk Eddelbuettel  <edd@debian.org>
